@@ -1,0 +1,7 @@
+SHOW FUNCTIONS 'concat';
+
+SHOW FUNCTIONS concat;
+
+DESCRIBE FUNCTION 'concat';
+
+DESCRIBE FUNCTION concat;
